Updated to show faculty preference and previous workshop attendance

--- a/_includes/swc/who.html
+++ b/_includes/swc/who.html
@@ -1,8 +1,8 @@
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is aimed at faculty and other researchers. The first workshop in this series was in August 2023. 
+  This workshop is designed to build on the previous workshop. 
   <strong>
-    You don't need to have any previous knowledge of the tools
-    that will be presented at the workshop.
+    It is expected that attendees will have attended the first workshop or have familiarity with basic concepts in Python.
   </strong>
 </p>
