Update wording for independent work time

--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -15,7 +15,7 @@
       <tr> <td>08:00</td>  <td> Plotting in Python ctd. </td></tr>
       <tr> <td>11:30</td>  <td>Lunch break</td> </tr>
       <tr> <td>12:30</td>  <td> Creating requested figures </td></tr>
-      <tr> <td>15:00</td>  <td> Data cleaning and plotting practice with <b>your</b> data and instructor support </td> </tr>
+      <tr> <td>15:00</td>  <td> Cleaning and plot <b>your</b> data with instructor support </td> </tr>
       <tr> <td>15:45</td>  <td>Wrap-up</td> </tr>
       <tr> <td>15:50</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
       <tr> <td>16:00</td>  <td>END</td> </tr>
